force-app/main/default/objects/uu_Changelog_Setting__mdt/uu_Changelog_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Changelog Setting</label>
    <pluralLabel>Changelog Settings</pluralLabel>
</CustomObject>