force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Change_Item_Icon_Default__c.field-meta.xml
<CustomField>
    <fullName>Change_Item_Icon_Default__c</fullName>
    <defaultValue>&quot;action:approval&quot;</defaultValue>
    <label>Change Item Icon Default</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>