force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Change_Type_Icon_Map__c.field-meta.xml
<CustomField>
    <fullName>Change_Type_Icon_Map__c</fullName>
    <description>Maps lightning-icons to Change Type field. Defaults to action:approval.</description>
    <label>Change Type Icon Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>