force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Changelog_Modal_Body__c.field-meta.xml
<CustomField>
    <fullName>Changelog_Modal_Body__c</fullName>
    <label>Changelog Modal Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>