force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Changelog_Modal_Header__c.field-meta.xml
<CustomField>
    <fullName>Changelog_Modal_Header__c</fullName>
    <label>Changelog Modal Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>