force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Component_Title__c.field-meta.xml
<CustomField>
    <fullName>Component_Title__c</fullName>
    <label>Component Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>