force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <defaultValue>&quot;Is_Published__c = &apos;Yes&apos; AND Change_Datetime__c = LAST_N_DAYS:30&quot;</defaultValue>
    <description>The filter criteria supports the WHERE clause specified at https://developer.salesforce.com/docs/atlas.en-us.soql_sosl.meta/soql_sosl/sforce_api_calls_soql_select_conditionexpression.htm.</description>
    <inlineHelpText>The filter criteria supports the WHERE clause specified at https://developer.salesforce.com/docs/atlas.en-us.soql_sosl.meta/soql_sosl/sforce_api_calls_soql_select_conditionexpression.htm.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>