force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/New_Items_Icon__c.field-meta.xml
<CustomField>
    <fullName>New_Items_Icon__c</fullName>
    <defaultValue>&quot;utility:settings&quot;</defaultValue>
    <label>New Items Icon</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>