force-app/main/default/objects/uu_Changelog_Setting__mdt/fields/New_Items_Message__c.field-meta.xml
<CustomField>
    <fullName>New_Items_Message__c</fullName>
    <description>Displayed when changelog items were published since the user&apos;s last view</description>
    <inlineHelpText>Displayed when changelog items were published since the user&apos;s last view</inlineHelpText>
    <label>New Items Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>